2009-09-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	139325 [S3 Proposal] Device turns to Portrait mode completely

	We were too optimistinc and turned to portrait even if there was
	a non-portrait capable system dialog.  This caused us to land in 
	APP state but turned to portrait and when the app exited we went
	back to HOME and didn't rotate back to landscape.  This is what
	one gets when he add performance hacks to a stable logic.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_portrait_forecast):
	  Be more careful about starting the rotation transition.
	  Now only do that if we are idling in landscape and no
	  sysmodal dialogs are in the way.
	* src/util/hd-transition.c (hd_transition_is_rotating):
	  Added.

2009-09-18  Gordon Williams <gordon.williams@collabora.co.uk>

	Regression fix for last change (getting stuck in landscape mode). 
	* src/util/hd-transition.c: Extra call to restack sets visibilities
	  correctly in case of very quick l->p->l transition, and allows
	  callui to request portrait mode again.

2009-09-17  Gordon Williams <gordon.williams@collabora.co.uk>
	
	Code to improve screen rotation speed
	Related to NB#139504
	Also fixes NB#139522 - another tuneup
	
	* src/home/hd-render-manager.c
	* src/home/hd-render-manager.h: Make this descend from TidyCachedGroup,
	  which allows us to take a screenshot of the whole screen before 
	  rotate.
	* src/util/hd-transition.c: Use hd_util_set_screen_size_properties
	  before rotation (and restore after). Add TRANS_START state to help
	  remove jittery transition. Use MBWindowManagerFlagLayoutRotated to
	  lay windows out before rotate too. Also take screenshot of the
	  screen using TidyCachedGroup for the first half of the anim.
	* src/mb/hd-atoms.c
	* src/mb/hd-atoms.h: HD_ATOM_MAEMO_SCREEN_WIDTH/HEIGHT for hd-util	  
	* src/util/hd-util.c
	* src/util/hd-util.h: Add hd_util_set_screen_size_properties, which
	  tells GdkScreen to send a resize event before the screen has
	  actually resized.